--- a/pages/comical/index.html
+++ b/pages/comical/index.html
@@ -4,9 +4,9 @@
 <html lang="zh">
 <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title>官方滑稽网</title>
-    <meta content="官方滑稽网" name="description">
-    <meta content="滑稽官网,滑稽吧,滑稽官方网,百度贴吧滑稽,滑稽网站,官方滑稽,滑稽网,huaji,滑稽官方网站,斜眼笑" name="keywords">
+    <title>滑稽</title>
+    <meta content="滑稽" name="description">
+    <meta content="滑稽" name="keywords">
     <link href="./images/huaji.ico" rel="shortcut icon">
     <style>
         body {
