--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         WIDGET = {
             "CONFIG": {
                 "layout": "2",
-                "width": 230,
-                "height": 300,
+                "width": 220,
+                "height": 260,
                 "background": "2",  // 1.暗色、2.浅色
                 "dataColor": "000000",
                 "language": "zh",
@@ -41,20 +41,6 @@
         }
         #app {
             padding: 5px;
-        }
-        .card {
-            line-height: 2;
-            margin: 5px;
-            width: 270px;
-            height: 340px;
-        }
-        .card:hover {
-            box-shadow: 0 2px 4px rgba(14, 2, 2, 0.16), 0 0 6px rgba(0, 0, 0, 0.22)
-        }
-        .el-image {
-            width: 230px;
-            height: 280px;
-            border-radius: 5px;
         }
 
         .web-info {
@@ -81,74 +67,86 @@
             color: #666;
         }
 
+        .el-tabs {
+            /*
+                top: 45px
+                bottom: 35px
+                app-padding: 5
+                误差:2 px
+             */
+            height: calc(100vh - 92px);
+        }
+
+        .el-tabs .el-tabs__content{
+            height: calc(100% - 68px);
+            overflow-y: scroll;
+        }
+
     </style>
 </head>
 <body style="background: -webkit-gradient(linear, 70% 100%, 100% 100%,from(#f5fbfd), to(#edf2f8));">
     <div style="
-        height: 80px;
+        height: 45px;
         width: 100%;
         background-color: #fff;
         display: flex;
         align-items: center;
     ">
         <img style="width: 200px;" src="source/imgs/wenp_2.png"/>
-<!--        闻哥简单主页-->
     </div>
-    <div id="app" style="min-height: calc(100vh - 50px);">
-        <div style="display: flex;flex-wrap: wrap;">
-            <div v-for="(card, index) in cards" >
-                <el-card v-if="card.show"  class="card">
-                    <div v-if="card.type === 'code'">
-
-                        <div :id="card.info"></div>
+    <div id="app" >
+        <el-tabs v-model="activeName" type="border-card" @tab-click="handleClick">
+            <template v-for="(item, index) in cards" >
+                <el-tab-pane :label="item.className" :name="index + ''">
+                    <div style="display: flex;flex-wrap: wrap;">
+                        <div v-for="(card, index) in item['children']" >
+                            <w-card :card="card"></w-card>
+                        </div>
                     </div>
-                    <div v-else-if="card.type === 'page'">
-                        <el-image :src="card.img || './source/imgs/card_img.png'" @click="toPage(card.info, card.noTarget)"></el-image>
-                        <div style="height: 20px;font-size: 12px; text-align: center">{{ card.title }}</div>
+                </el-tab-pane>
+            </template>
 
-                    </div>
-
-                </el-card>
-            </div>
-
-        </div>
-    </div>
-    <div class="web-info"  style="width: 100%; height: 50px; background-color: #fff;">
-
-        <a class="text-color" href="https://beian.miit.gov.cn" target="_blank">
-            <div style="display: flex;">
-                <img style="justify-content: center;width: 16px;margin-right: 3px;" src="source/imgs/gxb_favicon.png"/>
-                <span style="justify-content: center;height: 18px;">豫ICP备2023005798号</span>
-            </div>
+        </el-tabs>
 
 
-        </a>
     </div>
 
+    <script src="./components/WCard.js"></script>
     <script type="text/javascript">
+
         new Vue({el:"#app",
-
-            data: {
-                cards: cards,
+            components: {
+                wCard: new WCard().body,
             },
-            methods:{
-
-                toPage(url, noTarget){
-                    if (noTarget){
-                        window.location.href = url
-                    } else {
-                        window.open(url)
-                    }
+            data: {
+                clazzCard: clazzCard,
+                cards: allAndClassCard(),
+                activeName: '0'
+            },
+            methods: {
+                handleClick(tab, event) {
+                    // console.log(tab, event);
                 },
+
             },
         })
     </script>
+    <!-- 备案信息 -->
+    <div class="web-info" style="width: 100%; height: 35px; background-color: #fff;">
+        <a class="text-color" href="https://beian.miit.gov.cn" target="_blank">
+            <div style="display: flex;">
+                <img style="justify-content: center;width: 16px;margin-right: 3px;" src="source/imgs/gxb_favicon.png" alt=""/>
+                <span style="justify-content: center;height: 18px;">豫ICP备2023005798号</span>
+            </div>
+        </a>
+    </div>
 
 </body>
 
 </html>
 <script>
-    export default {
-        components: {NImage}
-    }
+    // const {NImage} = require("./cdn/naive-ui");
+    // export default {
+    //     components: {NImage}
+    // }
 </script>
