--- a/pages/firework-simulator-v2/index.html
+++ b/pages/firework-simulator-v2/index.html
@@ -7,11 +7,11 @@
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="theme-color" content="#000000">
-<link rel="shortcut icon" type="image/png" href="./firework-burst-icon-v2.png">
-<link rel="icon" type="image/png" href="./firework-burst-icon-v2.png">
-<link rel="apple-touch-icon-precomposed" href="./firework-burst-icon-v2.png">
+<link rel="shortcut icon" type="image/png" href="./icon.png">
+<link rel="icon" type="image/png" href="./icon.png">
+<link rel="apple-touch-icon-precomposed" href="./icon.png">
 <meta name="msapplication-TileColor" content="#000000">
-<meta name="msapplication-TileImage" content="./firework-burst-icon-v2.png">
+<meta name="msapplication-TileImage" content="./icon.png">
 <link href="./cdn/" rel="stylesheet">
 <link rel="stylesheet" href="./cdn/reset.min.css">
 <link rel="stylesheet" href="./style.css">
@@ -46,8 +46,8 @@
 <!-- App -->
 <div class="container">
 	<div class="loading-init">
-		<div class="loading-init__header">Loading</div>
-		<div class="loading-init__status">Assembling Shells</div>
+		<div class="loading-init__header">装载</div>
+		<div class="loading-init__status">组装外壳</div>
 	</div>
 	<div class="stage-container remove">
 		<div class="canvas-container">
@@ -70,52 +70,53 @@
 				<div class="btn btn--bright close-menu-btn">
 					<svg fill="white" width="24" height="24"><use href="#icon-close" xlink:href="#icon-close"></use></svg>
 				</div>
-				<div class="menu__header">Settings</div>
-				<div class="menu__subheader">For more info, click any label.</div>
+				<div class="menu__header">设置</div>
+				<div class="menu__subheader">有关详细信息，请单击任意标签.</div>
 				<form>
 					<div class="form-option form-option--select">
-						<label class="shell-type-label">Shell Type</label>
+						<label class="shell-type-label">外壳类型</label>
 						<select class="shell-type"></select>
 					</div>
 					<div class="form-option form-option--select">
-						<label class="shell-size-label">Shell Size</label>
+						<label class="shell-size-label">外壳尺寸</label>
 						<select class="shell-size"></select>
 					</div>
 					<div class="form-option form-option--select">
-						<label class="quality-ui-label">Quality</label>
+						<label class="quality-ui-label">质量</label>
 						<select class="quality-ui"></select>
 					</div>
 					<div class="form-option form-option--select">
-						<label class="sky-lighting-label">Sky Lighting</label>
+						<label class="sky-lighting-label">天空照明</label>
 						<select class="sky-lighting"></select>
 					</div>
 					<div class="form-option form-option--select">
-						<label class="scaleFactor-label">Scale</label>
+						<label class="scaleFactor-label">规模</label>
 						<select class="scaleFactor"></select>
 					</div>
 					<div class="form-option form-option--checkbox">
-						<label class="auto-launch-label">Auto Fire</label>
+						<label class="auto-launch-label">自动燃放</label>
 						<input class="auto-launch" type="checkbox" />
 					</div>
 					<div class="form-option form-option--checkbox form-option--finale-mode">
-						<label class="finale-mode-label">Finale Mode</label>
+						<label class="finale-mode-label">压轴模式</label>
 						<input class="finale-mode" type="checkbox" />
 					</div>
 					<div class="form-option form-option--checkbox">
-						<label class="hide-controls-label">Hide Controls</label>
+						<label class="hide-controls-label">隐藏控件</label>
 						<input class="hide-controls" type="checkbox" />
 					</div>
 					<div class="form-option form-option--checkbox form-option--fullscreen">
-						<label class="fullscreen-label">Fullscreen</label>
+						<label class="fullscreen-label">全屏</label>
 						<input class="fullscreen" type="checkbox" />
 					</div>
 					<div class="form-option form-option--checkbox">
-						<label class="long-exposure-label">Open Shutter</label>
+						<label class="long-exposure-label">打开快门</label>
 						<input class="long-exposure" type="checkbox" />
 					</div>
 				</form>
 				<div class="credits">
-					Passionately built by <a href="https://cmiller.tech/" target="_blank">Caleb Miller</a>.
+					热情的作者 <a href="https://cmiller.tech/" target="_blank">Caleb Miller</a>.
+					&nbsp;&nbsp;&nbsp;汉化.wenge
 				</div>
 			</div>
 		</div>
