--- a/pages/gpt/index.html
+++ b/pages/gpt/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="../../source/imgs/favicon.ico">
     <!-- 核心库 -->
     <script src="../../cdn/vue.js"></script>
     <script src="../../cdn/axios.min.js"></script>
