--- a/pages/kaleidoscope/index.html
+++ b/pages/kaleidoscope/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>万花筒</title>
         <link rel="stylesheet" href="./style.css">
+        <link rel="icon" href="../../source/imgs/favicon.ico">
     </head>
     <body>
         <canvas class="canvas canvas-pattern js-canvas" width="500" height="500"></canvas>
