--- a/pages/particle_effects/index.html
+++ b/pages/particle_effects/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>粒子效果</title>
+        <link rel="icon" href="../../source/imgs/favicon.ico">
         <script src="./cdn/jquery.min.js"></script>
         <link rel="stylesheet" href="./style.css">
+
+
     </head>
     <body>
         <div id="jsi-particle-container" class="container"></div>
