--- a/pages/gravity_points/index.html
+++ b/pages/gravity_points/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>重力笔</title>
+    <link rel="icon" href="../../source/imgs/favicon.ico">
     <style>
         body {
             font-family: Helvetica sans-serif;
