--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         display: flex;
         align-items: center;
     ">
-        <img style="width: 200px;" src="source/imgs/wenp_2.png"/>
+        <img style="max-width: 200px;max-height: 45px;" src="source/imgs/wenp_3.png"/>
     </div>
     <div id="app" >
         <el-tabs v-model="activeName" type="border-card" @tab-click="handleClick">
