--- a/pages/csgo_buff/index.html
+++ b/pages/csgo_buff/index.html
@@ -540,6 +540,10 @@
                         localized_name : "爪子刀",
                         tag_color: '#4186d8'
                     },
+                    weapon_knife_m9_bayonet: {
+                        localized_name : "M9 刺刀",
+                        tag_color: '#4186d8'
+                    },
                     weapon_knife_widowmaker: {
                         localized_name : "锯齿爪刀",
                         tag_color: '#4186d8'
@@ -783,6 +787,11 @@
                         localized_name : "halo_capsule",
                         tag_color: '#4186d8',
                         hidden: true
+                    },
+                    'crate_sticker_pack01': {
+                        localized_name : "印花胶囊",
+                        tag_color: '#4186d8',
+                        // hidden: true
                     },
                     'crate_sticker_pack_feral_predators_capsule_lootlist': {
                         localized_name : "crate_sticker_pack_feral_predators_capsule_lootlist",
