--- a/pages/csgo_buff/index.html
+++ b/pages/csgo_buff/index.html
@@ -220,6 +220,7 @@
 <!--        <div style="font-size: 12px;">steam出售手续费15%、购买手续费5%.</div>
         <div style="font-size: 12px;">buff交易手续费2.5%、提现手续费1%.</div>
         <div style="font-size: 12px; color: #cf9236">环亏损是指经过A->B->A过程后因A、B平台抽成导致的总亏损百分比.</div>-->
+        <div style="font-size: 12px; color: #cf9236">筛选暂不可用.</div>
         <div class="query">
             <el-menu mode="horizontal"
                     :default-active="0"
