说明信息补充

--- a/pages/csgo_buff/index.html
+++ b/pages/csgo_buff/index.html
@@ -210,8 +210,8 @@
             因为跨域问题限制，若您想访问本页，请使用windows命令关闭安全策略来启动您的浏览器：(后续可能会进行修正)
             <ul style="font-size: 12px; color: #e61d5f; margin: 2px" >
 
-                <li>谷歌："C:\Program Files\Google\Chrome\Application\chrome.exe" --disable-web-security --user-data-dir="D:\chrom_temp\profile"</li>
-                <li>微软："C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe" --disable-web-security --user-data-dir="D:\chrom_temp\profile"</li>
+                <li>谷歌："C:\Program Files\Google\Chrome\Application\chrome.exe" --disable-web-security --user-data-dir="D:\chrom_temp\profile" --new-window https://www.wenp.top/pages/csgo_buff/index.html</li>
+                <li>微软："C:\Program Files (x86)\Microsoft\Edge\Application\msedge.exe" --disable-web-security --user-data-dir="D:\chrom_temp\profile" --new-window https://www.wenp.top/pages/csgo_buff/index.html</li>
             </ul>
             ---------------------------------------------------------------------------------------------------------------------------------------------------------------
             某些功能可能需要您登录BUFF平台：<a style="color: #3a8ee6;" href="https://buff.163.com/" target="_blank">BUFF登录</a>
